<resources>
    <string name="app_name">Blitz-T</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="app_slogan">Enter the world of financial management!</string>
    <string name="start_text">Start</string>
    <string name="start_skip">Skip this step</string>
    <string name="text_create">Create account</string>
    <string name="text_log_in">To log in</string>
    <string name="text_search">Search</string>
    <string name="text_menu_home">Home</string>
    <string name="text_menu_account">Accounts</string>
    <string name="text_menu_transaction">Transactions</string>
    <string name="text_menu_benefit">Beneficiaries</string>
    <string name="text_menu_agency_points">Agency points</string>
    <string name="text_menu_suggestions">Suggestions</string>
    <string name="text_menu_setting">Settings</string>
    <string name="text_menu_log_out">Log out</string>
    <string name="text_many_agencies">agencies</string>
    <string name="text_name_microfinance">Microfinance</string>
    <string name="text_name_micro_finance">Microfinance</string>
    <string name="text_slogan">Slogan, slogan, slogan</string>
    <string name="text_many_costumers">costumers</string>
    <string name="text_many_agency">agencies</string>
    <string name="button_item_visit_agency">Visit our agencies</string>
    <string-array name="sex">
        <item>se</item>
    </string-array>

    // --- SHARED PREFERENCES ---

    <string name="SHARED_PREF_OPEN_APK">SHARED_PREF_OPEN_APK</string>
    <string name="SHARED_PREF_MEMBER_REGISTER">SHARED_PREF_MEMBER_REGISTER</string>
    <string name="SHARED_PREF_MICROFINANCE_SELECT">SHARED_PREF_MICROFINANCE_SELECT</string>
    <string name="SHARED_PREF_TRANSACTION_TYPE_SELECT">SHARED_PREF_TRANSACTION_TYPE_SELECT</string>
    <string name="SHARED_PREF_ACCOUNT_SELECT">SHARED_PREF_ACCOUNT_SELECT</string>
    <string name="SHARED_PREF_AGENCY_SELECT">SHARED_PREF_AGENCY_SELECT</string>
    <string name="SHARED_PREF_MEMBER_LOGIN">SHARED_PREF_MEMBER_LOGIN</string>
    <string name="SHARED_PREF_CUSTOMER_LOGIN">SHARED_PREF_CUSTOMER_LOGIN</string>
    <string name="KEY_SHARED_PREF_OPEN_APK">KEY_SHARED_PREF_OPEN_APK</string>
    <string name="PREFERENCE_FILE_KEY">PREFERENCE_FILE_KEY</string>
    <string name="PREFERENCE_FILE_NOTIFICATION">PREFERENCE_FILE_NOTIFICATION</string>


    // --- VALUES BUTTONS ---
    <string name="text_edit_profile">Edit your profile</string>
    <string name="text_edit_profile_description">Update your profile information</string>
    <string name="text_notification">Notifications</string>
    <string name="text_notification_description">Access new information</string>
    <string name="text_settings">Settings</string>
    <string name="text_settings_description">Adapt the system according to your needs</string>
    <string name="text_sign_out">Sign out</string>
    <string name="text_sign_out_description">Close your member session</string>
    <string name="text_create_account">Create an account</string>
    <string name="text_create_account_successfully">account successfully created</string>
    <string name="text_create_account_description">Create a free member account</string>
    <string name="text_login">To log in</string>
    <string name="text_login_description">Access your workspace</string>
    <string name="text_save">Save</string>
    <string name="text_send_membership_request">Send your membership request</string>


    // --- VALUES TEXT ---
    <string name="text_return">Return</string>

    <string name="text_my_micro_finances">My microfinances</string>
    <string name="text_others_micro_finances">Others microfinances</string>
    <string name="text_my_account">My account</string>
    <string name="text_edit_account">Edit account</string>
    <string name="text_personal_information">Register: Personal Information</string>
    <string name="text_further_information">Register: Further information</string>
    <string name="text_modified_account">Modified account</string>
    <string name="text_modified_cni">Modified CNI picture</string>
    <string name="text_modified_profile">Modified profile picture</string>
    <string name="text_operation_failed">Operation failed!</string>
    <string name="text_no_account_found">No account found!</string>
    <string name="text_error_complete_field">Please complete all fields!</string>
    <string name="text_enter_cni_number">Enter your CNI number</string>
    <string name="text_enter_password">Enter your password</string>
    <string name="text_enter_confirm_password">Confirm your password</string>
    <string name="text_enter_full_name">Enter your full name</string>
    <string name="text_enter_profession">Enter your profession</string>
    <string name="text_select_birth_date">Select your birth date</string>
    <string name="text_title_sex">Sex</string>
    <string name="text_choose_sex">Choose your gender</string>
    <string name="text_title_code_phone">Code phone</string>
    <string name="text_choose_code_phone">Choose code phone</string>
    <string name="text_title_country">Country</string>
    <string name="text_title_agency">Agency</string>
    <string name="text_choose_country">Choose your country</string>
    <string name="text_choose_agency">Choose your agency</string>
    <string name="text_title_city">City</string>
    <string name="text_choose_city">Choose your city</string>
    <string name="text_enter_address">Enter your address</string>
    <string name="text_membership_request">Membership request</string>
    <string name="text_next">Next</string>
    <string name="text_register">Register</string>
    <string name="title_activity_map_agency">Map</string>
    <string name="text_login_as_member">Please login as a member</string>
    <string name="request_wait_confirmation">Request made. You must wait for the response from microfinance, or go to the nearest agency for confirmation or call one of the microfinance agencies for more information. Thank you!</string>
    <string name="request_success_customer">Request made. You are now a customer of this microfinance!</string>
    <string name="request_success_transaction">Transaction successfully completed!</string>
    <string name="request_go_confirmation_transaction">Request made. Go to the nearest agency for confirmation or call one of the microfinance agencies for more information. Thank you!</string>
    <string name="request_in_progress">Request in progress!</string>
    <string name="text_new_account">New account</string>
    <string name="text_view_more">View more</string>
    <string name="recent_transactions">Recent transactions</string>
    <string name="text_new_credit">New credit</string>
    <string name="fast_transactions">Fast transaction</string>
    <string name="make_deposit">Make a deposit on this account</string>
    <string name="title_deposit">Deposit</string>
    <string name="title_withdrawal">Withdrawal</string>
    <string name="make_withdrawal">Make a withdrawal on this account</string>
    <string name="title_transfer">Transfer</string>
    <string name="make_transfer">Transfer to this account</string>
    <string name="text_transaction_history">Transaction history</string>
    <string name="text_credit">Credit</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_title_owner_type">Owner type</string>
    <string name="text_choose_owner_type">Choose owner type</string>
    <string name="text_title_account">Recipient account</string>
    <string name="text_choose_account">Choose recipient account</string>
    <string name="text_enter_recipient_name">Enter recipient name</string>
    <string name="text_title_code_phone_recipient">Recipient code phone</string>
    <string name="text_choose_code_phone_recipient">Choose code phone recipient</string>
    <string name="text_enter_phone_number_recipient">Enter phone number recipient</string>
    <string name="text_enter_cni_number_recipient">Enter cni number recipient</string>
    <string name="text_enter_key_code">Enter key code</string>
    <string name="text_enter_amount">Enter amount</string>
    <string name="text_title_status_recipient">Status recipient</string>
    <string name="text_choose_status_recipient">Choose status recipient</string>
    <string name="text_ok">Okay</string>
    <string name="text_welcome">Welcome</string>
    <string name="text_login_member">Login member</string>
    <string name="text_login_customer">Login customer</string>
    <string name="text_account_created">Your account has been created</string>
    <string name="message">Message</string>
    <string name="title">Title</string>
    <string name="text_choose_account_type">Choose account type</string>
    <string name="text_title_account_type">Account type</string>
    <string name="text_choose_type_saving_account_owner">Choose type saving account owner</string>
    <string name="text_title_type_saving_account_owner">Type saving account owner</string>
    <string name="text_enter_initial_balance">Enter initial balance</string>
    <string name="text_enter_company_name">Enter company name</string>
    <string name="text_enter_number_month_saving">Enter number month saving</string>
</resources>
