<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Views.Account.Activity.CreateAccountCustomerActivity">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:background="@drawable/transparence_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:fitsSystemWindows="true"
            android:background="?colorPrimary"
            android:theme="@style/Theme.AppCompat.DayNight.NoActionBar">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsing"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:collapsedTitleTextAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse"
                app:expandedTitleTextAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse"
                app:collapsedTitleGravity="start"
                app:expandedTitleGravity="bottom"
                app:title="@string/app_name"
                app:layout_scrollFlags="exitUntilCollapsed|scroll"
                android:theme="@style/Theme.AppCompat.DayNight.NoActionBar">

                <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/image_item_micro_finance"
                    android:src="@drawable/background"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:layout_centerInParent="true"
                    app:layout_collapseMode="parallax"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/transparence_image"/>

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/app_bar"
                    android:layout_width="match_parent"
                    android:layout_height="85dp"
                    app:layout_collapseMode="pin"
                    app:menu="@menu/return_menu"
                    app:navigationIcon="@drawable/ic_bank_building_my"
                    android:paddingTop="18dp"/>

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_vertical"
            android:layout_marginBottom="38dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingBottom="60dp">

                <LinearLayout
                    android:id="@+id/constraintLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:layout_margin="15dp"
                    android:orientation="vertical">

                    <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
                        android:id="@+id/text_balance_account_group"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        app:labelText="@string/text_enter_initial_balance"
                        app:iconSignifier="@drawable/ic_banknotes"
                        android:foregroundTint="@color/defaultColorWhite"
                        app:secondaryColor="@color/defaultColorGray"
                        app:primaryColor="@color/defaultColorWhite">

                        <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                            android:id="@+id/text_balance_account"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:enabled="false"
                            android:textColor="@color/defaultColorWhite"/>

                    </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>

                    <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
                        android:id="@+id/text_password_group"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        app:labelText="@string/text_enter_password"
                        app:iconSignifier="@drawable/ic_password"
                        android:foregroundTint="@color/defaultColorWhite"
                        app:secondaryColor="@color/defaultColorGray"
                        app:primaryColor="@color/defaultColorWhite"
                        android:soundEffectsEnabled="true">

                        <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                            android:id="@+id/text_password"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:enabled="false"
                            android:textColor="@color/defaultColorWhite"/>

                    </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>

                    <RelativeLayout
                        android:id="@+id/spinner_account_type_group"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp">

                        <ImageView
                            android:id="@+id/img0"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_alignParentStart="true"
                            android:layout_centerVertical="true"
                            android:background="@drawable/ic_landlord"
                            android:backgroundTint="@color/defaultColorWhite"/>

                        <com.chivorn.smartmaterialspinner.SmartMaterialSpinner
                            android:id="@+id/spinner_account_type"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_toEndOf="@+id/img0"
                            android:layout_centerInParent="true"
                            android:layout_marginLeft="10dp"
                            android:spinnerMode="dialog"
                            android:theme="@style/AppTheme"
                            app:smsp_arrowColor="@color/defaultColorWhite"
                            app:smsp_floatingLabelColor="@color/defaultColorWhite"
                            app:smsp_hintColor="@color/defaultColorWhite"
                            app:smsp_itemColor="@color/defaultColorWhite"
                            app:smsp_itemListColor="@color/defaultColorBlack"
                            app:smsp_itemListHintBackgroundColor="@color/colorPrimaryDark"
                            app:smsp_itemListHintColor="@color/defaultColorWhite"
                            app:smsp_selectedItemListColor="@color/colorPrimaryDark"
                            app:smsp_underlineColor="@color/defaultColorWhite"
                            app:smsp_floatingLabelText="@string/text_title_account_type"
                            app:smsp_multilineError="false"
                            app:smsp_hint="@string/text_choose_account_type"
                            app:smsp_underlineSize="1dp"
                            />

                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/spinner_type_saving_account_owner_group"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp">

                        <ImageView
                            android:id="@+id/img01"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_alignParentStart="true"
                            android:layout_centerVertical="true"
                            android:background="@drawable/ic_account_box_black_24dp"
                            android:backgroundTint="@color/defaultColorWhite"/>

                        <com.chivorn.smartmaterialspinner.SmartMaterialSpinner
                            android:id="@+id/spinner_type_saving_account_owner"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_toEndOf="@+id/img01"
                            android:layout_centerInParent="true"
                            android:layout_marginLeft="10dp"
                            android:spinnerMode="dialog"
                            android:theme="@style/AppTheme"
                            app:smsp_arrowColor="@color/defaultColorWhite"
                            app:smsp_floatingLabelColor="@color/defaultColorWhite"
                            app:smsp_hintColor="@color/defaultColorWhite"
                            app:smsp_itemColor="@color/defaultColorWhite"
                            app:smsp_itemListColor="@color/defaultColorBlack"
                            app:smsp_itemListHintBackgroundColor="@color/colorPrimaryDark"
                            app:smsp_itemListHintColor="@color/defaultColorWhite"
                            app:smsp_selectedItemListColor="@color/colorPrimaryDark"
                            app:smsp_underlineColor="@color/defaultColorWhite"
                            app:smsp_floatingLabelText="@string/text_title_type_saving_account_owner"
                            app:smsp_multilineError="false"
                            app:smsp_hint="@string/text_choose_type_saving_account_owner"
                            app:smsp_underlineSize="1dp"/>

                    </RelativeLayout>

                    <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
                        android:id="@+id/text_company_name_group"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        app:labelText="@string/text_enter_company_name"
                        app:iconSignifier="@drawable/ic_company"
                        android:foregroundTint="@color/defaultColorWhite"
                        app:secondaryColor="@color/defaultColorGray"
                        app:primaryColor="@color/defaultColorWhite"
                        android:soundEffectsEnabled="true">

                        <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                            android:id="@+id/text_company_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:enabled="false"
                            android:textColor="@color/defaultColorWhite"/>

                    </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>

                    <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
                        android:id="@+id/text_number_month_group"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:iconSignifier="@drawable/ic_deposit"
                        android:layout_marginTop="16dp"
                        android:foregroundTint="@color/defaultColorWhite"
                        app:secondaryColor="@color/defaultColorGray"
                        app:primaryColor="@color/defaultColorWhite"
                        app:labelText="@string/text_enter_number_month_saving">

                        <studio.carbonylgroup.textfieldboxes.ExtendedEditText
                            android:id="@+id/text_number_month"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:textColor="@color/defaultColorWhite"/>

                    </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>

                </LinearLayout>

                <Button
                    android:id="@+id/btn_save"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_gradient_style"
                    android:text="@string/text_save"
                    android:textColor="@color/defaultColorWhite"
                    android:layout_marginTop="50dp"
                    android:layout_marginBottom="10dp"
                    android:layout_margin="15dp"
                    android:drawableEnd="@drawable/icons8_circled_right_24px"
                    android:drawableRight="@drawable/icons8_circled_right_24px"
                    android:padding="@dimen/size_padding_button_text"
                    android:drawableTint="@color/defaultColorWhite"
                    android:paddingRight="10dp"/>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>

